css ref bug fix

--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <link href='http://fonts.googleapis.com/css?family=Teko:300|Titillium+Web:300|Montserrat:700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="../css/reset.css">
-        <link rel="stylesheet" href=".../css/main.css">
+        <link rel="stylesheet" href="../css/main.css">
         <title>STOCK PHOTOS THAT DON'T SUCK</title>
     </head>
     <body>
